@@ -1,0 +1,15 @@
+Package {
+     name            = "gconf",
+     auto            = True,
+     import_dirs     = ["@hidir@"],
+     source_dirs     = [],
+     library_dirs    = [],
+     hs_libraries    = ["gconf"],
+     extra_libraries = [@GCONF_LIBS@],
+     include_dirs    = [@GCONF_CFLAGS@],
+     c_includes      = ["gconf/gconf-client.h"],
+     package_deps    = ["gtk2hs"],
+     extra_ghc_opts  = [],
+     extra_cc_opts   = [],
+     extra_ld_opts   = []
+}
