@@ -1,0 +1,15 @@
+Package {
+     name            = "mogul",
+     auto            = False,
+     import_dirs     = ["@hidir@"],
+     source_dirs     = [],
+     library_dirs    = [],
+     hs_libraries    = ["mogul"],
+     extra_libraries = [],
+     include_dirs    = [],
+     c_includes      = [],
+     package_deps    = ["gtk2hs"],
+     extra_ghc_opts  = [],
+     extra_cc_opts   = [],
+     extra_ld_opts   = []
+}
